--- a/static/index.html
+++ b/static/index.html
@@ -11,13 +11,27 @@
         
     </header>
     <main>
-        <div id="views" class="widget ">
-          <div id="input" class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis labore aliquam optio nemo eius dolorum consequatur unde rem deserunt officiis? Illum temporibus nisi aut deserunt unde, non ex excepturi culpa!</div>
+        <div id="views" class="widget">
+          <textarea id="input" spellcheck="false" class="container textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis labore aliquam optio nemo eius dolorum consequatur unde rem deserunt officiis? Illum temporibus nisi aut deserunt unde, non ex excepturi culpa!</textarea>
+          <div id="display" class="container textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis labore aliquam optio nemo eius dolorum consequatur unde rem deserunt officiis? Illum temporibus nisi aut deserunt unde, non ex excepturi culpa!</div>
           <div id="details" class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta, laudantium? Reiciendis, esse, quos aperiam iste nesciunt totam illo eos error optio soluta odio dolorem eius placeat commodi a repudiandae non.</div>
         </div>
+        <button id="submit">Evaluate</button>
         <span id="error" class="warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>
-        <p id="feedback" class="container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci animi, iusto consequuntur facilis quibusdam eum beatae repellendus, reprehenderit est, eius error itaque dolorem doloremque cum quidem nostrum! Quasi, maiores eos.</p>
-        <span id="mark" >10.0</p>
+        <br><br><br>
+
+        <div id="evaluation" class="widget">
+          <h1>Evaluation</h1>
+          <p id="feedback" class="container textbox">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci animi, iusto consequuntur facilis quibusdam eum beatae repellendus, reprehenderit est, eius error itaque dolorem doloremque cum quidem nostrum! Quasi, maiores eos.</p>
+          <div id="mark-display">
+            <br>
+            <h3>Overall mark</h3>
+            <hr>
+            <h2>10.0</h2>
+          </div>
+        </div>
+
+        <div class="widget"></div>
     </main>
     <footer>
     </footer>
