--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
           <div id="display" class="container textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis labore aliquam optio nemo eius dolorum consequatur unde rem deserunt officiis? Illum temporibus nisi aut deserunt unde, non ex excepturi culpa!</div>
           <div id="details" class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta, laudantium? Reiciendis, esse, quos aperiam iste nesciunt totam illo eos error optio soluta odio dolorem eius placeat commodi a repudiandae non.</div>
         </div>
-        <button id="submit">Evaluate</button>
+        <button id="submit" class="inactive">Evaluate</button>
         <span id="error" class="warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>
         <br><br><br>
 
