More js completed

--- a/static/index.html
+++ b/static/index.html
@@ -14,8 +14,9 @@
         <div id="views" class="widget">
           <textarea id="input" spellcheck="false" class="container textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis labore aliquam optio nemo eius dolorum consequatur unde rem deserunt officiis? Illum temporibus nisi aut deserunt unde, non ex excepturi culpa!</textarea>
           <div id="display" class="container textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis labore aliquam optio nemo eius dolorum consequatur unde rem deserunt officiis? Illum temporibus nisi aut deserunt unde, non ex excepturi culpa!</div>
-          <div id="details" class="container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta, laudantium? Reiciendis, esse, quos aperiam iste nesciunt totam illo eos error optio soluta odio dolorem eius placeat commodi a repudiandae non.</div>
+          <div id="details" class="container"></div>
         </div>
+        <select id="mode" class="container"></select>
         <button id="submit" class="inactive">Evaluate</button>
         <span id="error" class="warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>
         <br><br><br>
