--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
             <br>
             <h3>Overall mark</h3>
             <hr>
-            <h2>10.0</h2>
+            <h2 id="rating">10.0</h2>
           </div>
         </div>
 
